<resources>
    <string name="app_name">Ecommerce</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Not Signed in?</string>
    <string name="nav_header_subtitle">Email address</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Nav drawer -->
    <string name="nav_home">Home</string>
    <string name="nav_order">My Orders</string>
    <string name="nav_reward">My Rewards</string>
    <string name="nav_cart">My Cart</string>
    <string name="nav_wishlist">Wishlist</string>
    <string name="nav_account">My Account</string>
    <string name="nav_signOut">Sign out</string>
    <string name="color">#ffffff</string>
</resources>
