<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_order" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/nav_cart" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_like"
            android:title="@string/nav_wishlist" />
        <item
            android:id="@+id/nav_reward"
            android:icon="@drawable/ic_gift"
            android:title="@string/nav_reward" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_user"
            android:title="@string/nav_account" />
    </group>

        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_turn_off"
            android:title="@string/nav_signOut" />
</menu>
